# kanatoko

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MISSION.md  README.md  build.rs
.github/workflows/: release.yml
fixtures/contracts/aquarius-wrapper/: Cargo.toml  README.md
fixtures/contracts/aquarius-wrapper/src/: lib.rs
fixtures/contracts/legacy-v25/: Cargo.toml  README.md
fixtures/contracts/legacy-v25/src/: lib.rs
fixtures/contracts/stateful/: Cargo.toml  README.md
fixtures/contracts/stateful/src/: lib.rs
fixtures/mainnet/aquarius-xlm-usdc-cp/: README.md  auto-capture.json  capture.json  ledger.json  manifest.json
fixtures/wasm/: kanatoko_aquarius_wrapper.wasm  kanatoko_legacy_v25_fixture.wasm  kanatoko_stateful_fixture.wasm
src/: auto.rs  capture.rs  fixture.rs  lib.rs  runtime.rs  strict.rs
tests/: aquarius_candidate.rs  aquarius_frozen.rs  auto_runner.rs  capture_builder.rs  cli.rs  fixture_runtime.rs  m2_capture_api.rs  m3_aquarius.rs  m3_cli.rs  protocol_boundary.rs  strict_fork.rs
tools/: capture_aquarius_xlm_usdc_cp.rs  kanatoko.rs
