[package]
name = "kanatoko"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
publish = false

[dependencies]
sha2 = "=0.10.9"
soroban-env-host = "=27.0.0"
soroban-ledger-snapshot = "=27.0.0"
soroban-sdk = { version = "=27.0.0", features = ["testutils"] }
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
